--- a/SampleBIDataAPI/SampleBIDataAPI.csproj
+++ b/SampleBIDataAPI/SampleBIDataAPI.csproj
@@ -111,6 +111,8 @@
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Index.html" />
+    <Content Include="Scripts\d3.v3.min.js" />
+    <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
