--- a/SampleBIDataAPI/SampleBIDataAPI.csproj
+++ b/SampleBIDataAPI/SampleBIDataAPI.csproj
@@ -113,6 +113,7 @@
     <Content Include="Index.html" />
     <Content Include="Scripts\d3.v3.min.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\sollisfunctions.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
