commit from home

--- a/SampleBIDataAPI/Web.config
+++ b/SampleBIDataAPI/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <appSettings></appSettings>
   <connectionStrings>
-    <add name="OLAPConnection" connectionString="provider=MSOLAP;data source=SPSQLDEV2013-1;initial catalog=PatientCT"/>
+    <add name="OLAPConnection" connectionString="provider=MSOLAP;data source=PALBOOK3;initial catalog=PatientCT"/>
     <add name="OLAPConnectionGrid" connectionString="provider=MSOLAP;data source=SPSQLDEV2013-1;initial catalog=PatientCT;cube name=PatientCT"/>
   </connectionStrings>
   <system.web>
